# UltraCurlQT

./: .gitignore  .gitmodules  CMakeLists.txt
assets/: mainwindow.ui
include/: download_data.h  download_widget.h  downloads_status.h  mainwindow.h
src/: download_data.cpp  download_widget.cpp  downloads_status.cpp  main.cpp  mainwindow.cpp
